--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -28,23 +28,23 @@ Project File Date:  01/06/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\Comp v5\Bin'
 Build target 'Target 1'
 compiling game.c...
-game.h(13): warning:  #1295-D: Deprecated declaration changeActivePlayer - give arg types
-  int changeActivePlayer();
-game.c(72): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+game.h(26): warning:  #1295-D: Deprecated declaration placeWall - give arg types
+  void placeWall();
+game.c(68): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
   	sprintf(string, "Player A has %d walls left", a_remaining_walls);
-game.c(74): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+game.c(70): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
   	sprintf(string, "Player B has %d walls left", b_remaining_walls);
-game.c(82): warning:  #68-D: integer conversion resulted in a change of sign
+game.c(76): warning:  #68-D: integer conversion resulted in a change of sign
   	NVIC_SetPriority(TIMER0_IRQn, -3);
-game.c(118): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+game.c(114): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
   	sprintf(string, "Player A has %d walls left", a_remaining_walls);
-game.c(120): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+game.c(116): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
   	sprintf(string, "Player B has %d walls left", b_remaining_walls);
-game.c(339): warning:  #1-D: last line of file ends without a newline
-  #endif
+game.c(394): warning:  #1-D: last line of file ends without a newline
+  }
 game.c: 7 warnings, 0 errors
 linking...
-Program Size: Code=23220 RO-data=1792 RW-data=92 ZI-data=1132  
+Program Size: Code=24850 RO-data=1806 RW-data=100 ZI-data=1132  
 ".\sample.axf" - 0 Error(s), 7 Warning(s).
 
 <h2>Software Packages used:</h2>
