--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,7 +27,25 @@ Project File Date:  01/06/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\Comp v5\Bin'
 Build target 'Target 1'
-".\sample.axf" - 0 Error(s), 0 Warning(s).
+compiling game.c...
+game.h(27): warning:  #1295-D: Deprecated declaration placeWall - give arg types
+  void placeWall();
+game.c(74): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player A has %d walls left", a_remaining_walls);
+game.c(76): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player B has %d walls left", b_remaining_walls);
+game.c(82): warning:  #68-D: integer conversion resulted in a change of sign
+  	NVIC_SetPriority(TIMER0_IRQn, -3);
+game.c(131): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player A has %d walls left", a_remaining_walls);
+game.c(133): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player B has %d walls left", b_remaining_walls);
+game.c(510): warning:  #1-D: last line of file ends without a newline
+  }
+game.c: 7 warnings, 0 errors
+linking...
+Program Size: Code=26266 RO-data=1774 RW-data=116 ZI-data=1644  
+".\sample.axf" - 0 Error(s), 7 Warning(s).
 
 <h2>Software Packages used:</h2>
 
