--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -26,8 +26,51 @@ Project File Date:  01/06/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\Comp v5\Bin'
-Build target 'Target 1'
-".\sample.axf" - 0 Error(s), 0 Warning(s).
+Rebuild target 'Target 1'
+assembling startup_LPC17xx.s...
+compiling AsciiLib.c...
+compiling sample.c...
+compiling IRQ_timer.c...
+timer\IRQ_timer.c(36): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "uint8_t *"
+  	GUI_Text(135, 300, &first_char, White, Black);
+timer\IRQ_timer.c: 1 warning, 0 errors
+compiling core_cm3.c...
+compiling lib_timer.c...
+compiling system_LPC17xx.c...
+compiling TouchPanel.c...
+compiling lib_joystick.c...
+joystick\lib_joystick.c(38): warning:  #1-D: last line of file ends without a newline
+  }
+joystick\lib_joystick.c: 1 warning, 0 errors
+compiling funct_joystick.c...
+compiling lib_led.c...
+compiling HzLib.c...
+compiling funct_led.c...
+compiling lib_button.c...
+compiling IRQ_button.c...
+compiling lib_RIT.c...
+compiling game.c...
+game.c(74): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player A has %d walls left", a_remaining_walls);
+game.c(76): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player B has %d walls left", b_remaining_walls);
+game.c(82): warning:  #68-D: integer conversion resulted in a change of sign
+  	NVIC_SetPriority(TIMER0_IRQn, -3);
+game.c(132): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player A has %d walls left", a_remaining_walls);
+game.c(134): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *restrict"
+  	sprintf(string, "Player B has %d walls left", b_remaining_walls);
+game.c(516): warning:  #1-D: last line of file ends without a newline
+  }
+game.c: 6 warnings, 0 errors
+compiling IRQ_RIT.c...
+RIT\IRQ_RIT.c(43): warning:  #177-D: variable "position"  was declared but never referenced
+  	static int position = 0;
+RIT\IRQ_RIT.c: 1 warning, 0 errors
+compiling GLCD.c...
+linking...
+Program Size: Code=26282 RO-data=1774 RW-data=132 ZI-data=2156  
+".\sample.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +93,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
