--- a/sample.htm
+++ b/sample.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\sample.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\sample.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Fri Jan 12 15:54:57 2024
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Fri Jan 12 16:33:26 2024
 <BR><P>
 <H3>Maximum Stack Usage =        444 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -529,6 +529,7 @@ Global Symbols
 </UL>
 <BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;checkWin
 <LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;gameInit
+<LI><a href="#[2a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RIT_IRQHandler
 <LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;changeActivePlayer
 <LI><a href="#[e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;TIMER0_IRQHandler
 </UL>
@@ -576,7 +577,7 @@ Global Symbols
 
 <P><STRONG><a name="[ac]"></a>LED_deinit</STRONG> (Thumb, 14 bytes, Stack size 0 bytes, lib_led.o(.text), UNUSED)
 
-<P><STRONG><a name="[2a]"></a>RIT_IRQHandler</STRONG> (Thumb, 1218 bytes, Stack size 8 bytes, irq_rit.o(.text))
+<P><STRONG><a name="[2a]"></a>RIT_IRQHandler</STRONG> (Thumb, 1282 bytes, Stack size 8 bytes, irq_rit.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 444 + Unknown Stack Size
 <LI>Call Chain = RIT_IRQHandler &rArr; placeWall &rArr; checkPath
 </UL>
@@ -590,6 +591,7 @@ Global Symbols
 <LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;drawWalls
 <LI><a href="#[68]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__NVIC_EnableIRQ
 <LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_DrawWall
+<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GUI_Text
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_lpc17xx.o(RESET)
 </UL>
@@ -709,7 +711,7 @@ Global Symbols
 <LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;changeActivePlayer
 </UL>
 
-<P><STRONG><a name="[51]"></a>changeActivePlayer</STRONG> (Thumb, 322 bytes, Stack size 24 bytes, game.o(.text))
+<P><STRONG><a name="[51]"></a>changeActivePlayer</STRONG> (Thumb, 340 bytes, Stack size 24 bytes, game.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 160 + Unknown Stack Size
 <LI>Call Chain = changeActivePlayer &rArr; GUI_Text &rArr; PutChar &rArr; LCD_SetPoint &rArr; LCD_SetCursor
 </UL>
@@ -758,7 +760,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[65]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;setNewPosition
 </UL>
 
-<P><STRONG><a name="[4f]"></a>cleanMoves</STRONG> (Thumb, 160 bytes, Stack size 16 bytes, game.o(.text))
+<P><STRONG><a name="[4f]"></a>cleanMoves</STRONG> (Thumb, 310 bytes, Stack size 16 bytes, game.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = cleanMoves &rArr; LCD_SquareColor &rArr; LCD_DrawLine &rArr; LCD_SetPoint &rArr; LCD_SetCursor
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;getPlayerPosition
@@ -770,7 +772,7 @@ Global Symbols
 <LI><a href="#[e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;TIMER0_IRQHandler
 </UL>
 
-<P><STRONG><a name="[65]"></a>setNewPosition</STRONG> (Thumb, 354 bytes, Stack size 32 bytes, game.o(.text))
+<P><STRONG><a name="[65]"></a>setNewPosition</STRONG> (Thumb, 228 bytes, Stack size 32 bytes, game.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 192 + Unknown Stack Size
 <LI>Call Chain = setNewPosition &rArr; changeActivePlayer &rArr; GUI_Text &rArr; PutChar &rArr; LCD_SetPoint &rArr; LCD_SetCursor
 </UL>
@@ -815,7 +817,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[66]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;placeWall
 </UL>
 
-<P><STRONG><a name="[66]"></a>placeWall</STRONG> (Thumb, 276 bytes, Stack size 8 bytes, game.o(.text))
+<P><STRONG><a name="[66]"></a>placeWall</STRONG> (Thumb, 280 bytes, Stack size 8 bytes, game.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 436 + Unknown Stack Size
 <LI>Call Chain = placeWall &rArr; checkPath
 </UL>
